# PetThePup

./: .gitignore  index.html  main.py  pasted_text_1725863732829.txt  pasted_text_1725867302471.txt  pasted_text_1725897312297.txt  pasted_text_1725900560636.txt  pyproject.toml
static/css/: style.css
static/js/: app.js  dog_model.js
templates/: index.html  login.html  profile.html  register.html  subscribe.html
