[tool.poetry]
name = "repl-nix-petthepup"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0.3"
flask-login = "^0.6.3"
flask-wtf = "^1.2.1"
email-validator = "^2.2.0"
flask-bcrypt = "^1.0.1"
flask-sqlalchemy = "^3.1.1"
psycopg2-binary = "^2.9.9"
flask-oauthlib = "^0.9.6"
authlib = "^1.3.2"
requests = "^2.32.3"
stripe = "^10.10.0"
werkzeug = "^3.0.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
